@@ -2,6 +2,8 @@ package examples.hello.serializable;
 
 import java.io.IOException;
 
+import net.sf.jrtps.QualityOfService;
+import net.sf.jrtps.message.parameter.QosPartition;
 import net.sf.jrtps.udds.DataReader;
 import net.sf.jrtps.udds.Participant;
 
@@ -9,7 +11,10 @@ public class HelloReader {
     public static void main(String[] args) throws InstantiationException, IllegalAccessException, IOException {
         Participant p = new Participant(0); // domain 0, participant 1
 
-        DataReader<HelloMessage> dr = p.createDataReader(HelloMessage.class);
+        QualityOfService qos = new QualityOfService();
+        qos.setPolicy(new QosPartition(new String[]{"partition-1"}));
+        
+        DataReader<HelloMessage> dr = p.createDataReader(HelloMessage.class, qos);
         HelloListener hl = new HelloListener(); // implements DataListener
         dr.addSampleListener(hl);
         
